# stock-vpu

./: .gitignore  Dockerfile  README.md  TODO.md  account-createUI.html  advanced_visualizer.py  api_server.py  app.py  batch_processor.py  cache_manager.py  calculator.py  config.py  data_fetcher.py  data_validator.py  docker-compose.yml  export_manager.py  logger.py  loginUI.html  main.py  plugin_system.py  pyproject.toml  requirements-dev.txt  requirements.txt  spec-financial.yaml  spec.yaml  stock-vpu-design.md  technical_analyzer.py  test_vpu.py  visualizer.py  workUI.html
.github/workflows/: ci.yml
docs/plans/: 2026-03-07-refactor-plan.md  2026-03-07-visualization-design.md  2026-03-07-visualization-implementation-plan.md  2026-03-08-candlestick-integration-design.md  2026-03-09-financial-analysis-design.md  2026-03-09-financial-analysis-tasks.md
