[project]
name = "stock-vpu"
version = "1.0.0"
requires-python = ">=3.10"

# =============================================================================
# Ruff — Linting + Formatting
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# 中等规则集:
#   E   = pycodestyle errors
#   F   = pyflakes (unused imports, undefined names, etc.)
#   I   = isort (import sorting)
#   UP  = pyupgrade (modernize Python syntax)
#   B   = flake8-bugbear (common bug patterns)
#   SIM = flake8-simplify (simplifiable code)
#   RUF = ruff-specific rules
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

ignore = [
    "E501",    # line-too-long — 交给 formatter 处理
    "B008",    # function-call-in-default-argument — FastAPI Depends() 需要
    "SIM108",  # if-else-instead-of-ternary — 有时 if/else 更清晰
    "RUF001",  # ambiguous-unicode — 中文 UI 文案中全角标点是有意为之
    "RUF012",  # mutable-class-default — dataclass fields 误报
]

# 允许 ruff fix 自动修复的规则
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["calculator", "config", "data_fetcher", "data_validator",
                      "cache_manager", "export_manager", "batch_processor",
                      "api_server", "visualizer", "advanced_visualizer",
                      "technical_analyzer", "plugin_system", "logger"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Mypy — Type Checking (基础模式)
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# 基础模式: 不强制要求类型注解，但检查已有注解的正确性
check_untyped_defs = true
disallow_incomplete_defs = true
# 不强制所有函数都有注解 (渐进式过渡)
disallow_untyped_defs = false

# 第三方库忽略 (没有 type stubs)
[[tool.mypy.overrides]]
module = [
    "akshare.*",
    "streamlit.*",
    "streamlit_echarts.*",
    "pyarrow.*",
    "openpyxl.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
